result/subtask09-function/testcase01.out
/home/share/hw2/input/subtask09-function/testcase01.cpp:2:5: error:  syntax error
     2 |    cout << s << endl;
       |    ^
Total lines: 2
